--- a/.github/workflows/buildpush.yml
+++ b/.github/workflows/buildpush.yml
@@ -9,16 +9,16 @@ jobs:
   # PHP 8.2 Debian
   build-8_2-cli:
     uses: ./.github/workflows/createtest.yml
-    name: namoshek/php-mssql:8.2-cli
+    name: fuadkleb/php-mssql:8.2-cli
     secrets: inherit
     with:
       source-directory: 8.2/cli
-      image-tag: namoshek/php-mssql:8.2-cli
+      image-tag: fuadkleb/php-mssql:8.2-cli
 
   build-8_2-fpm:
     uses: ./.github/workflows/createtest.yml
-    name: namoshek/php-mssql:8.2-fpm
+    name: fuadkleb/php-mssql:8.2-fpm
     secrets: inherit
     with:
       source-directory: 8.2/fpm
-      image-tag: namoshek/php-mssql:8.2-fpm
+      image-tag: fuadkleb/php-mssql:8.2-fpm
