feat(docker): add curl extension

--- a/8.2/fpm/Dockerfile
+++ b/8.2/fpm/Dockerfile
@@ -27,7 +27,7 @@ COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr
 # Install required PHP extensions and all their prerequisites available via apt.
 RUN chmod uga+x /usr/bin/install-php-extensions \
     && sync \
-    && install-php-extensions bcmath ds exif gd intl opcache pcntl pdo_sqlsrv redis sqlsrv zip pgsql pdo_pgsql
+    && install-php-extensions bcmath ds exif gd intl opcache pcntl pdo_sqlsrv redis sqlsrv zip pgsql pdo_pgsql curl
 
 # Set Min Protocol OpenSSL TLS1.0
 RUN sed -i "s/\(MinProtocol *= *\).*/\1TLSv1.0 /" "/etc/ssl/openssl.cnf"
