fix(apm): php8.2

--- a/8.2/fpm/Dockerfile
+++ b/8.2/fpm/Dockerfile
@@ -36,23 +36,9 @@ RUN sed -i "s/\(CipherString *= *\).*/\1DEFAULT@SECLEVEL=1 /" "/etc/ssl/openssl.
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 
-# Install Elastic APM
-RUN apt-get update && apt-get install -y \
-    bash \
-    curl \
-    git 
-
-WORKDIR /opt/apm
-ENV CFLAGS="-std=gnu99"
-RUN git clone https://github.com/elastic/apm-agent-php.git /opt/apm \
-    && cd /opt/apm/src/ext \
-    && phpize \
-    && ./configure --enable-elastic_apm \
-    && make clean \
-    && make \
-    && make install \
-    && echo "extension=elastic_apm.so" > /usr/local/etc/php/conf.d/docker-php-ext-apm.ini \
-    && echo "elastic_apm.bootstrap_php_part_file=/opt/apm/src/bootstrap_php_part.php" >> /usr/local/etc/php/conf.d/docker-php-ext-apm.ini
+# Install Elastic APM 
+RUN curl -fsSL https://github.com/elastic/apm-agent-php/releases/download/v1.9.1/apm-agent-php_1.9.1_all.deb > /tmp/apm-gent-php.deb \
+    && dpkg -i /tmp/apm-gent-php.deb
 
 # Setting the work directory.
 WORKDIR /var/www
