--- a/8.4/fpm/Dockerfile
+++ b/8.4/fpm/Dockerfile
@@ -1,47 +1,97 @@
-FROM php:8.4-fpm-bullseye
+# syntax=docker/dockerfile:1.7
+FROM php:8.4-fpm-bookworm
 
-ENV ACCEPT_EULA=Y
+ARG TARGETARCH
+ENV ACCEPT_EULA=Y \
+    DEBIAN_FRONTEND=noninteractive \
+    COMPOSER_ALLOW_SUPERUSER=1 \
+    PATH="$PATH:/opt/mssql-tools18/bin"
 
-# Install prerequisites required for tools and extensions installed later on.
-RUN apt-get update \
-    && apt-get install -y apt-transport-https gnupg2 libpng-dev libzip-dev unzip \
-    && rm -rf /var/lib/apt/lists/*
+# -- Base OS deps (no recommends) -------------------------------------------------
+RUN set -eux; \
+    apt-get update; \
+    apt-get install -y --no-install-recommends \
+        ca-certificates curl gnupg2 unzip \
+        libpng-dev libzip-dev \
+        ; \
+    rm -rf /var/lib/apt/lists/*
 
-# Install prerequisites for the sqlsrv and pdo_sqlsrv PHP extensions.
-# Some packages are pinned with lower priority to prevent build issues due to package conflicts.
-# Link: https://github.com/microsoft/linux-package-repositories/issues/39
-RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
-    && curl https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list \
-    && echo "Package: unixodbc\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft \
-    && echo "Package: unixodbc-dev\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft \
-    && echo "Package: libodbc1:amd64\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft \
-    && echo "Package: odbcinst\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft \
-    && echo "Package: odbcinst1debian2:amd64\nPin: origin \"packages.microsoft.com\"\nPin-Priority: 100\n" >> /etc/apt/preferences.d/microsoft \
-    && apt-get update \
-    && apt-get install -y msodbcsql18 mssql-tools18 unixodbc-dev \
-    && rm -rf /var/lib/apt/lists/*
+# -- Add Microsoft repo for Debian 12 (Bookworm) & install ODBC + tools ----------
+# This replaces apt-key and pins safely for Debian 12.
+RUN set -eux; \
+    curl -fsSL -o /tmp/packages-microsoft-prod.deb \
+      "https://packages.microsoft.com/config/debian/12/packages-microsoft-prod.deb"; \
+    dpkg -i /tmp/packages-microsoft-prod.deb; \
+    rm -f /tmp/packages-microsoft-prod.deb; \
+    apt-get update; \
+    # sqlcmd/bcp tools + runtime and headers
+    ACCEPT_EULA=Y apt-get install -y --no-install-recommends \
+      msodbcsql18 mssql-tools18 unixodbc-dev; \
+    # make path persistent for all shells
+    printf 'export PATH="$PATH:/opt/mssql-tools18/bin"\n' >/etc/profile.d/mssql-tools.sh; \
+    rm -rf /var/lib/apt/lists/*
 
-# Retrieve the script used to install PHP extensions from the source container.
-COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/install-php-extensions
+# -- Bring in install-php-extensions ---------------------------------------------
+FROM mlocati/php-extension-installer:latest AS php-ext
+FROM php:8.4-fpm-bookworm
 
-# Install required PHP extensions and all their prerequisites available via apt.
-RUN chmod uga+x /usr/bin/install-php-extensions \
-    && sync \
-    && install-php-extensions bcmath ds exif gd intl opcache pcntl pdo_sqlsrv redis sqlsrv zip pgsql pdo_pgsql curl
+ARG TARGETARCH
+ENV ACCEPT_EULA=Y \
+    DEBIAN_FRONTEND=noninteractive \
+    COMPOSER_ALLOW_SUPERUSER=1 \
+    PATH="$PATH:/opt/mssql-tools18/bin"
 
-# Set Min Protocol OpenSSL TLS1.0
-RUN sed -i "s/\(MinProtocol *= *\).*/\1TLSv1.0 /" "/etc/ssl/openssl.cnf"
-RUN sed -i "s/\(CipherString *= *\).*/\1DEFAULT@SECLEVEL=1 /" "/etc/ssl/openssl.cnf"
+# Re-install minimal base deps (final stage)
+RUN set -eux; \
+    apt-get update; \
+    apt-get install -y --no-install-recommends \
+        ca-certificates curl gnupg2 unzip \
+        libpng-dev libzip-dev \
+        ; \
+    rm -rf /var/lib/apt/lists/*
 
-# Set AccessLog to off
-RUN sed -i "s/error_log = /;error_log = /" /usr/local/etc/php-fpm.d/docker.conf
+# Microsoft repo + ODBC (same as above, in the final stage)
+RUN set -eux; \
+    curl -fsSL -o /tmp/packages-microsoft-prod.deb \
+      "https://packages.microsoft.com/config/debian/12/packages-microsoft-prod.deb"; \
+    dpkg -i /tmp/packages-microsoft-prod.deb; \
+    rm -f /tmp/packages-microsoft-prod.deb; \
+    apt-get update; \
+    ACCEPT_EULA=Y apt-get install -y --no-install-recommends \
+      msodbcsql18 mssql-tools18 unixodbc-dev; \
+    printf 'export PATH="$PATH:/opt/mssql-tools18/bin"\n' >/etc/profile.d/mssql-tools.sh; \
+    rm -rf /var/lib/apt/lists/*
 
-# Install Composer
+# install-php-extensions helper
+COPY --from=php-ext /usr/bin/install-php-extensions /usr/bin/install-php-extensions
+
+# PHP extensions (installer auto-installs & removes build deps)
+RUN set -eux; \
+    chmod +x /usr/bin/install-php-extensions; \
+    install-php-extensions \
+      bcmath ds exif gd intl opcache pcntl \
+      pdo_sqlsrv sqlsrv redis zip pgsql pdo_pgsql curl
+
+# Optional: relax OpenSSL policy (only if you really need it)
+RUN sed -i 's/^\s*MinProtocol.*/MinProtocol = TLSv1.0/' /etc/ssl/openssl.cnf \
+ && sed -i 's/^\s*CipherString.*/CipherString = DEFAULT@SECLEVEL=1/' /etc/ssl/openssl.cnf
+
+# Quiet FPM access log as in your original
+RUN set -eux; \
+    sed -i 's/error_log = /;error_log = /' /usr/local/etc/php-fpm.d/docker.conf || true
+
+# Composer (tiny)
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
 
-# Install Elastic APM 
-RUN curl -fsSL https://github.com/elastic/apm-agent-php/releases/download/v1.15.1/apm-agent-php_1.15.1_amd64.deb > /tmp/apm-gent-php.deb \
-    && dpkg -i /tmp/apm-gent-php.deb
+# --- Elastic APM agent (optional, arch-aware) -----------------------------------
+# If Elastic publishes arm64 .deb, set the file name accordingly. Otherwise skip on arm64.
+# Example keeps amd64 only to avoid failing on arm64.
+RUN set -eux; \
+    curl -fsSL -o /tmp/apm-agent-php.deb \
+    "https://github.com/elastic/apm-agent-php/releases/download/v1.15.1/apm-agent-php_1.15.1_${TARGETARCH}.deb"; \
+    apt-get update; \
+    apt-get install -y --no-install-recommends /tmp/apm-agent-php.deb; \
+    rm -f /tmp/apm-agent-php.deb; \
+    rm -rf /var/lib/apt/lists/*; 
 
-# Setting the work directory.
 WORKDIR /var/www
