--- a/.github/workflows/buildpush.yml
+++ b/.github/workflows/buildpush.yml
@@ -14,6 +14,7 @@ jobs:
     with:
       source-directory: 8.4/cli
       image-tag: fuadkleb/php-mssql:8.4-cli
+      platforms: linux/amd64, linux/arm64
 
   build-8_4-fpm:
     uses: ./.github/workflows/createtest.yml
@@ -22,6 +23,7 @@ jobs:
     with:
       source-directory: 8.4/fpm
       image-tag: fuadkleb/php-mssql:8.4-fpm
+      platforms: linux/amd64, linux/arm64
 
   build-8_4-fpm-alpine:
     uses: ./.github/workflows/createtest.yml
