--- a/.github/workflows/createtest.yml
+++ b/.github/workflows/createtest.yml
@@ -12,14 +12,23 @@ on:
         type: string
         required: true
       platforms:
-        required: false
+        description: "Platforms to build, comma-separated (e.g. linux/amd64,linux/arm64)."
         type: string
-        default: "linux/amd64"   # default single-arch
-        description: "The platforms to build the Docker image for, default is linux/amd64."
+        required: false
+        default: "linux/amd64"
+    secrets:
+      DOCKER_USERNAME:
+        required: true
+      DOCKER_PASSWORD:
+        required: true
+      TESTS_SQLSRV_DB_SECRET:
+        required: true
+
 jobs:
   build_and_test:
     name: Build, test and publish Docker image
     runs-on: ubuntu-latest
+
     services:
       sqlsrv:
         image: mcr.microsoft.com/mssql/server:2017-latest
@@ -33,41 +42,52 @@ jobs:
           --health-interval 10s
           --health-timeout 3s
           --health-retries 20
+
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v4
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build ${{ inputs.image-tag }}
-        uses: docker/build-push-action@v4
+      # Build AMD64 ONLY and load into the local Docker engine for testing
+      - name: Build (amd64 only) for tests
+        uses: docker/build-push-action@v6
         with:
           context: ${{ inputs.source-directory }}
-          tags: ${{ inputs.image-tag }}
+          tags: ${{ inputs.image-tag }}-ci
           platforms: linux/amd64
           load: true
 
       - name: Test SQL Server connection
         uses: addnab/docker-run-action@v3
         with:
-          image: ${{ inputs.image-tag }}
-          options: -v ${{ github.workspace }}/.ci/tests:/work -e MSSQL_HOST=sqlsrv -e MSSQL_PORT=1433 -e MSSQL_DATABASE=master -e MSSQL_USERNAME=sa -e MSSQL_PASSWORD=${{ secrets.TESTS_SQLSRV_DB_SECRET }}
+          image: ${{ inputs.image-tag }}-ci
+          options: >-
+            -v ${{ github.workspace }}/.ci/tests:/work
+            -e MSSQL_HOST=sqlsrv
+            -e MSSQL_PORT=1433
+            -e MSSQL_DATABASE=master
+            -e MSSQL_USERNAME=sa
+            -e MSSQL_PASSWORD=${{ secrets.TESTS_SQLSRV_DB_SECRET }}
           run: php /work/test_connection.php
 
-      - name: Push ${{ inputs.image-tag }}
-        uses: docker/build-push-action@v4
+      # Build & push multi-arch manifest for the real tag
+      - name: Build & Push (multi-arch)
         if: ${{ github.event_name != 'pull_request' }}
+        uses: docker/build-push-action@v6
         with:
           context: ${{ inputs.source-directory }}
           tags: ${{ inputs.image-tag }}
-          platforms: linux/amd64
+          platforms: ${{ inputs.platforms }}   # e.g. "linux/amd64,linux/arm64"
           push: true
+          cache-from: type=registry,ref=${{ inputs.image-tag }}-cache
+          cache-to: type=registry,ref=${{ inputs.image-tag }}-cache,mode=max
